; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/gdiplus/extr_pen.c_test_constructor_destructor.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/gdiplus/extr_pen.c_test_constructor_destructor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UnitPixel = common dso_local global i32 0, align 4
@InvalidParameter = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"Expected pen to be NULL\0A\00", align 1
@Ok = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [32 x i8] c"Expected pen to be initialized\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_constructor_destructor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_constructor_destructor() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  store i32* null, i32** %2, align 8
  %3 = load i32, i32* @UnitPixel, align 4
  %4 = call i32 @GdipCreatePen1(i32 -65281, float 1.000000e+01, i32 %3, i32** null)
  store i32 %4, i32* %1, align 4
  %5 = load i32, i32* @InvalidParameter, align 4
  %6 = load i32, i32* %1, align 4
  %7 = call i32 @expect(i32 %5, i32 %6)
  %8 = load i32*, i32** %2, align 8
  %9 = icmp eq i32* %8, null
  %10 = zext i1 %9 to i32
  %11 = call i32 @ok(i32 %10, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  %12 = load i32, i32* @UnitPixel, align 4
  %13 = call i32 @GdipCreatePen1(i32 -65281, float 1.000000e+01, i32 %12, i32** %2)
  store i32 %13, i32* %1, align 4
  %14 = load i32, i32* @Ok, align 4
  %15 = load i32, i32* %1, align 4
  %16 = call i32 @expect(i32 %14, i32 %15)
  %17 = load i32*, i32** %2, align 8
  %18 = icmp ne i32* %17, null
  %19 = zext i1 %18 to i32
  %20 = call i32 @ok(i32 %19, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.1, i64 0, i64 0))
  %21 = call i32 @GdipDeletePen(i32* null)
  store i32 %21, i32* %1, align 4
  %22 = load i32, i32* @InvalidParameter, align 4
  %23 = load i32, i32* %1, align 4
  %24 = call i32 @expect(i32 %22, i32 %23)
  %25 = load i32*, i32** %2, align 8
  %26 = call i32 @GdipDeletePen(i32* %25)
  store i32 %26, i32* %1, align 4
  %27 = load i32, i32* @Ok, align 4
  %28 = load i32, i32* %1, align 4
  %29 = call i32 @expect(i32 %27, i32 %28)
  ret void
}

declare dso_local i32 @GdipCreatePen1(i32, float, i32, i32**) #1

declare dso_local i32 @expect(i32, i32) #1

declare dso_local i32 @ok(i32, i8*) #1

declare dso_local i32 @GdipDeletePen(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
